# llm-lab

./: .description  .envrc.sample  .gitignore  .replit  CLAUDE.md  CLAUDE.org  CODE_OF_CONDUCT.md  CONTRIBUTING.org  Makefile  README.md  README.org  README.sh  README.shell  WORKLOG.md  dev-requirements.txt  language-templates.org  pyproject.toml  replit.nix  requirements-lock.txt  requirements.txt  setup.org  setup.py
.emacs.d/: init.el
analysis/: .description  repo_analysis_20250202_021632.md  repo_analysis_20250202_052931.md  repo_analysis_20250202_053048.md
config/: default.yaml
docs/: .description  PATHS.md  WORKFLOW_UPDATES.md  alpha_tools_testing.md  chat_with_database_demo.md  knowledge-graph.org  multi_agent_prompts.org  sin-analysis.md  test-tangle.org
examples/: .description  00-getting-started.org  00-getting-started.shell  01-templates.org  01-templates.shell  02-context-management.org  02-context-management.shell  03-agents.org  03-agents.shell  04-embeddings.org  04-embeddings.shell  05-advanced-usage.org  05-advanced-usage.shell  05-photo-embeddings.org  06-advanced-usage.org  07-tools-alpha.org  07a-chat-with-database.org  50-ollama-models.org  51-sqlite-queries.el  51-sqlite-queries.org  51-sqlite-queries.shell  99-feature-requests.org  agent-examples.org  chat_with_database.py  common-headers.org  context.org  embeddings.org  llm-commands.org  llm-examples.org
prompts/: .description  dialogue-prompt.txt  memory-prompt.txt  reflection-prompt.txt  session-agent.md  sin-analysis-template.txt  sin-estimation-template.txt  sin-evaluation-template.txt  sin-planning-template.txt  sin_template.txt  summary-prompt.txt  template-list.txt
(+133 files in other folders)
