[project]
name = "llm-lab"
version = "0.1.0"
description = "Testing environment for exploring LLM CLI tools"
requires-python = ">=3.11"
dependencies = [
    "llm>=0.26a0",
    "ttok",
    "strip-tags",
    "llm-gemini>=0.20a0",
    "llm-bedrock",
    "llm-claude",
    "llm-anthropic>=0.16a0",
    "files-to-prompt>=0.4",
    "fetch-github-issues>=0.1.2",
    "sqlite-utils>=3.38",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
